--- a/public/pages/insurance/kj-driver-search.html
+++ b/public/pages/insurance/kj-driver-search.html
@@ -44,18 +44,15 @@
                 <div class="col-md-2 col-sm-6 mb-2 mb-md-0">
                   <select id="searchTypeFilter" class="form-control">
                     <option value="이름">이름</option>
-                    <option value="휴대폰">휴대폰</option>
-                    <option value="면허번호">면허번호</option>
-                    <option value="소속업체">소속업체</option>
+                    <option value="주민번호">주민번호</option>
                   </select>
                 </div>
                 
                 <!-- 상태 필터 -->
                 <div class="col-md-2 col-sm-6 mb-2 mb-md-0">
                   <select id="statusFilter" class="form-control">
-                    <option value="">전체 상태</option>
-                    <option value="활동">활동</option>
-                    <option value="휴면">휴면</option>
+                    <option value="">전체</option>
+                    <option value="정상">정상</option>
                   </select>
                 </div>
                 
@@ -139,6 +136,7 @@
       await window.sjTemplateLoader.initializePage('kj-driver-search');
     });
   </script>
+  <script src="/js/insurance/kj-driver-search.js"></script>
 </body>
 </html>
 
