기사찾기 프론트 수정

--- a/public/pages/insurance/kj-driver-search.html
+++ b/public/pages/insurance/kj-driver-search.html
@@ -88,15 +88,21 @@
                     <tr>
                       <th class="col-number">#</th>
                       <th class="col-name">이름</th>
-                      <th class="col-company d-none d-lg-table-cell">소속업체</th>
-                      <th class="col-phone">휴대폰</th>
-                      <th class="col-license d-none d-lg-table-cell">면허번호</th>
-                      <th class="col-status">상태</th>
+                      <th class="col-company d-none d-lg-table-cell">주민번호</th>
+                      <th class="col-phone">상태</th>
+                      <th class="col-license d-none d-lg-table-cell">증권성격</th>
+                      <th class="col-status">대리운전회사</th>
+                      <th class="col-status">보험회사</th>
+                      <th class="col-status">증권번호</th>
+                      <th class="col-status">할인할증</th>
+                      <th class="col-status">등록일</th>
+                      <th class="col-status">해지일</th>
+                      <th class="col-status">사고</th>
                     </tr>
                   </thead>
                   <tbody id="driver_search_table_body">
                     <tr>
-                      <td colspan="6" class="text-center py-4">데이터를 불러오는 중...</td>
+                      <td colspan="12" class="text-center py-4">데이터를 불러오는 중...</td>
                     </tr>
                   </tbody>
                 </table>
