기사 찾기 수정

--- a/public/pages/insurance/kj-driver-search.html
+++ b/public/pages/insurance/kj-driver-search.html
@@ -86,19 +86,19 @@
                 <table class="table table-bordered table-hover table-sm">
                   <thead class="thead-light">
                     <tr>
-                      <th class="col-number">#</th>
-                      <th class="col-name">이름</th>
-                      <th class="col-jumin d-none d-lg-table-cell">주민번호</th>
-                      <th class="col-status">상태</th>
-                      <th class="col-etag d-none d-lg-table-cell">증권성격</th>
-                      <th class="col-company">대리운전회사</th>
-                      <th class="col-insurer">보험회사</th>
-                      <th class="col-policy">증권번호</th>
-                      <th class="col-discount">할인할증</th>
-                      <th class="col-phone d-none d-lg-table-cell">핸드폰</th>
-                      <th class="col-date d-none d-lg-table-cell">등록일</th>
-                      <th class="col-date d-none d-lg-table-cell">해지일</th>
-                      <th class="col-accident">사고</th>
+                      <th class="col-kj-ser-number">#</th>
+                      <th class="col-kj-name">이름</th>
+                      <th class="col-kj-jumin d-none d-lg-table-cell">주민번호</th>
+                      <th class="col-kj-status">상태</th>
+                      <th class="col-kj-etag d-none d-lg-table-cell">증권성격</th>
+                      <th class="col-kj-company">대리운전회사</th>
+                      <th class="col-kj-insurer">보험회사</th>
+                      <th class="col-kj-policy">증권번호</th>
+                      <th class="col-kj-discount">할인할증</th>
+                      <th class="col-kj-phone d-none d-lg-table-cell">핸드폰</th>
+                      <th class="col-kj-date d-none d-lg-table-cell">등록일</th>
+                      <th class="col-kj-date d-none d-lg-table-cell">해지일</th>
+                      <th class="col-kj-accident">사고</th>
                     </tr>
                   </thead>
                   <tbody id="driver_search_table_body">
