성능최적화

--- a/public/pages/insurance/kj-driver-search.html
+++ b/public/pages/insurance/kj-driver-search.html
@@ -136,11 +136,11 @@
 
   <!-- 대리운전회사 정보 모달 -->
   <div class="modal fade" id="companyInfoModal" tabindex="-1" aria-labelledby="companyInfoModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-xl">
+    <div class="modal-dialog modal-xl modal-dialog-scrollable">
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title" id="companyInfoModalLabel">대리운전회사 정보</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="닫기"></button>
         </div>
         <div class="modal-body" id="companyInfoModalBody" style="max-height: 85vh; overflow-y: auto;">
           <div class="text-center py-4">
