--- a/public/pages/insurance/kj-driver-company.html
+++ b/public/pages/insurance/kj-driver-company.html
@@ -168,6 +168,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <!-- SJ 템플릿 로더 -->
   <script src="/js/sj-template-loader.js"></script>
+  <!-- 공통 모듈 -->
+  <script src="/js/insurance/kj-company-modal.js"></script>
   <!-- 페이지 전용 스크립트 -->
   <script src="/js/insurance/kj-driver-company.js"></script>
   <script>
