--- a/public/pages/insurance/kj-driver-search.html
+++ b/public/pages/insurance/kj-driver-search.html
@@ -204,6 +204,34 @@
     </div>
   </div>
 
+  <!-- 배서 모달 -->
+  <div class="modal fade" id="endorseModal" tabindex="-1" aria-labelledby="endorseModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-xl modal-dialog-scrollable">
+      <div class="modal-content">
+        <div class="modal-header bg-light">
+          <div class="d-flex justify-content-between align-items-center w-100">
+            <div>
+              <button type="button" class="btn btn-sm btn-outline-primary me-2" id="endorseExcelUpBtn">ExcelUp</button>
+              <span id="endorseModalTitle" class="ms-2"></span>
+            </div>
+            <div class="d-flex align-items-center">
+              <label for="endorseDate" class="me-2 mb-0">배서기준일</label>
+              <input type="date" id="endorseDate" class="form-control form-control-sm" style="width: 150px;">
+              <button type="button" class="btn-close ms-2" data-bs-dismiss="modal" aria-label="닫기"></button>
+            </div>
+          </div>
+        </div>
+        <div class="modal-body" id="endorseModalBody" style="max-height: 70vh; overflow-y: auto;">
+          <!-- 배서 입력 테이블이 여기에 렌더링됩니다 -->
+        </div>
+        <div class="modal-footer bg-light">
+          <button type="button" class="btn btn-primary" id="endorseSaveBtn">저장</button>
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">닫기</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <!-- SJ 템플릿 로더 -->
