--- a/public/pages/insurance/kj-driver-search.html
+++ b/public/pages/insurance/kj-driver-search.html
@@ -206,7 +206,7 @@
 
   <!-- 배서 모달 -->
   <div class="modal fade" id="endorseModal" tabindex="-1" aria-labelledby="endorseModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-xl modal-dialog-scrollable">
+    <div class="modal-dialog modal-dialog-scrollable" style="max-width: 80%;">
       <div class="modal-content">
         <div class="modal-header bg-light">
           <div class="d-flex justify-content-between align-items-center w-100">
