--- a/public/pages/insurance/kj-driver-company.html
+++ b/public/pages/insurance/kj-driver-company.html
@@ -191,6 +191,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <!-- SJ 템플릿 로더 -->
   <script src="/js/sj-template-loader.js"></script>
+  <!-- 주민번호 검증 유틸리티 -->
+  <script src="/js/utils/jumin-validator.js"></script>
   <!-- 공통 모듈 -->
   <script src="/js/insurance/kj-company-modal.js"></script>
   <!-- 페이지 전용 스크립트 -->
