배서기준일

--- a/public/pages/insurance/kj-driver-search.html
+++ b/public/pages/insurance/kj-driver-search.html
@@ -65,8 +65,14 @@
                   </select>
                 </div>
                 
+                <!-- 해지기준일 -->
+                <div class="col-md-2 col-sm-6 mb-2 mb-md-0">
+                  <label for="terminationDate" class="form-label small mb-1">해지기준일</label>
+                  <input type="date" id="terminationDate" class="form-control" value="">
+                </div>
+                
                 <!-- 검색 영역 -->
-                <div class="col-md-6">
+                <div class="col-md-4">
                   <div class="input-group">
                     <input type="text" id="search_word" class="form-control" placeholder="예: 홍길동 / 010-1234-5678">
                     <div class="input-group-append">
