배서리스트 헤더 변경

--- a/public/pages/insurance/kj-driver-endorse-list.html
+++ b/public/pages/insurance/kj-driver-endorse-list.html
@@ -91,25 +91,33 @@
             <!-- 데스크톱 테이블 -->
             <div class="desktop-table">
               <div class="table-responsive">
-                <table class="table table-bordered table-hover table-sm">
+                <table class="table table-bordered table-hover table-sm" style="font-size: 0.85rem;">
                   <thead class="thead-light">
                     <tr>
-                      <th style="width: 5%;">#</th>
-                      <th style="width: 10%;">증권번호</th>
-                      <th style="width: 8%;">배서번호</th>
-                      <th style="width: 8%;">보험사</th>
-                      <th style="width: 10%;">배서일자</th>
-                      <th style="width: 8%;">상태</th>
-                      <th style="width: 10%;">작성자</th>
-                      <th style="width: 15%;">대리운전회사</th>
-                      <th style="width: 10%;">성명</th>
-                      <th style="width: 8%;">주민번호</th>
-                      <th style="width: 8%;">핸드폰</th>
+                      <th>No</th>
+                      <th>담당자</th>
+                      <th>대리운전회사명</th>
+                      <th>성명</th>
+                      <th>주민번호</th>
+                      <th>핸드폰</th>
+                      <th>진행단계</th>
+                      <th>manager</th>
+                      <th>기준일</th>
+                      <th>신청일</th>
+                      <th>증권번호</th>
+                      <th>증권종류</th>
+                      <th>요율</th>
+                      <th>상태</th>
+                      <th>배서처리</th>
+                      <th>보험사</th>
+                      <th>보험료</th>
+                      <th>C보험료</th>
+                      <th>중복여부</th>
                     </tr>
                   </thead>
                   <tbody id="endorseListTableBody">
                     <tr>
-                      <td colspan="11" class="text-center py-4">필터를 선택하세요.</td>
+                      <td colspan="19" class="text-center py-4">필터를 선택하세요.</td>
                     </tr>
                   </tbody>
                 </table>
