공통모듈추가

--- a/public/pages/insurance/kj-driver-search.html
+++ b/public/pages/insurance/kj-driver-search.html
@@ -216,6 +216,8 @@
   <script src="/js/sj-template-loader.js"></script>
   <!-- 주민번호 검증 유틸리티 -->
   <script src="/js/utils/jumin-validator.js"></script>
+  <!-- KJ 공통 상수 모듈 -->
+  <script src="/js/insurance/kj-constants.js"></script>
   <!-- 공통 모듈 -->
   <script src="/js/insurance/kj-company-modal.js"></script>
   <script>
