--- a/public/pages/insurance/kj-driver-company.html
+++ b/public/pages/insurance/kj-driver-company.html
@@ -193,6 +193,8 @@
   <script src="/js/sj-template-loader.js"></script>
   <!-- 주민번호 검증 유틸리티 -->
   <script src="/js/utils/jumin-validator.js"></script>
+  <!-- KJ 공통 상수 모듈 -->
+  <script src="/js/insurance/kj-constants.js"></script>
   <!-- 공통 모듈 -->
   <script src="/js/insurance/kj-company-modal.js"></script>
   <!-- 페이지 전용 스크립트 -->
