--- a/public/pages/insurance/kj-driver-endorse-list.html
+++ b/public/pages/insurance/kj-driver-endorse-list.html
@@ -105,7 +105,7 @@
                       <th>기준일</th>
                       <th>신청일</th>
                       <th>증권번호</th>
-                      <th>증권종류</th>
+                      <th>증권성격</th>
                       <th>요율</th>
                       <th>상태</th>
                       <th>배서처리</th>
@@ -152,6 +152,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <!-- SJ 템플릿 로더 -->
   <script src="/js/sj-template-loader.js"></script>
+  <!-- KJ 공통 상수 모듈 -->
+  <script src="/js/insurance/kj-constants.js"></script>
   <script>
     document.addEventListener('DOMContentLoaded', async function() {
       await window.sjTemplateLoader.initializePage('kj-driver-endorse-list');
