--- a/public/pages/insurance/kj-driver-endorse-list.html
+++ b/public/pages/insurance/kj-driver-endorse-list.html
@@ -110,8 +110,8 @@
                       <th>상태</th>
                       <th>배서처리</th>
                       <th>보험사</th>
-                      <th>보험료</th>
-                      <th>C보험료</th>
+                      <th class="text-end">보험료</th>
+                      <th class="text-end">C보험료</th>
                       <th>중복여부</th>
                     </tr>
                   </thead>
