--- a/public/pages/insurance/kj-driver-code-by-policy.html
+++ b/public/pages/insurance/kj-driver-code-by-policy.html
@@ -152,9 +152,16 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <!-- SJ 템플릿 로더 -->
   <script src="/js/sj-template-loader.js"></script>
+  <!-- KJ 공통 상수 -->
+  <script src="/js/insurance/kj-constants.js"></script>
+  <!-- 증권별 코드 JS -->
+  <script src="/js/insurance/kj-driver-code-by-policy.js"></script>
   <script>
     document.addEventListener('DOMContentLoaded', async function() {
       await window.sjTemplateLoader.initializePage('kj-driver-code-by-policy');
+      if (window.kjPolicyPage) {
+        window.kjPolicyPage.init();
+      }
     });
   </script>
 </body>
