--- a/public/pages/insurance/kj-driver-code-by-policy.html
+++ b/public/pages/insurance/kj-driver-code-by-policy.html
@@ -35,70 +35,8 @@
     <div class="row">
       <div class="col-12">
         <div class="card">
-          <div class="card-body">
-            
-            <!-- 통합 검색/필터 영역 -->
-            <div class="search-filter-row">
-              <div class="row align-items-end">
-                <!-- 날짜 필터 -->
-                <div class="col-md-3 col-sm-6 mb-2 mb-md-0">
-                  <input type="date" id="fromDate" class="form-control" />
-                </div>
-                <div class="col-md-3 col-sm-6 mb-2 mb-md-0">
-                  <input type="date" id="toDate" class="form-control" />
-                </div>
-                <!-- 검색 버튼 -->
-                <div class="col-md-2 col-sm-6 mb-2 mb-md-0">
-                  <button class="btn btn-primary w-100" type="button" id="search_btn">
-                    <i class="fas fa-search"></i> <span class="d-none d-sm-inline">검색</span>
-                  </button>
-                </div>
-              </div>
-            </div>
-            <!-- 통합 검색/필터 영역 끝 -->
-
-            <!-- 데스크톱 테이블 -->
-            <div class="desktop-table">
-              <div class="table-responsive">
-                <table class="table table-bordered table-hover table-sm">
-                  <thead class="thead-light">
-                    <tr>
-                      <th class="col-number">#</th>
-                      <th class="col-policy-number">증권번호</th>
-                      <th class="col-insurance-company">보험사</th>
-                      <th class="col-code">코드</th>
-                      <th class="col-rate">요율</th>
-                      <th class="col-start-date d-none d-lg-table-cell">시작일</th>
-                      <th class="col-end-date d-none d-lg-table-cell">종료일</th>
-                    </tr>
-                  </thead>
-                  <tbody id="code_by_policy_table_body">
-                    <tr>
-                      <td colspan="7" class="text-center py-4">데이터를 불러오는 중...</td>
-                    </tr>
-                  </tbody>
-                </table>
-              </div>
-            </div>
-
-            <!-- 모바일 카드 -->
-            <div class="mobile-cards" id="code_by_policy_mobile_cards">
-              <div class="text-center py-4">데이터를 불러오는 중...</div>
-            </div>
-
-            <!-- 페이징 -->
-            <div class="row mt-3">
-              <div class="col-md-6 col-12 mb-2">
-                <div id="pagination_info" class="dataTables_info text-center text-md-left"></div>
-              </div>
-              <div class="col-md-6 col-12">
-                <nav aria-label="Page navigation">
-                  <ul class="pagination pagination-sm justify-content-center justify-content-md-end" id="pagination_controls">
-                    <!-- 페이징 버튼이 여기에 로드됩니다 -->
-                  </ul>
-                </nav>
-              </div>
-            </div>
+          <div class="card-body" id="page-content">
+            <!-- JS에서 동적으로 렌더링 -->
           </div>
         </div>
       </div>
