--- a/public/pages/insurance/kj-driver-endorse-list.html
+++ b/public/pages/insurance/kj-driver-endorse-list.html
@@ -217,6 +217,28 @@
       await window.sjTemplateLoader.initializePage('kj-driver-endorse-list');
     });
   </script>
+  <!-- 배서기준일 변경 모달 -->
+  <div class="modal fade" id="endorseDayModal" tabindex="-1" aria-labelledby="endorseDayModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="endorseDayModalLabel">배서기준일 변경</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <div class="mb-3">
+            <label for="endorseDayInput" class="form-label">배서기준일</label>
+            <input type="date" class="form-control" id="endorseDayInput">
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">취소</button>
+          <button type="button" class="btn btn-primary" id="saveEndorseDayBtn">저장</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <script src="/js/insurance/kj-driver-endorse-list.js"></script>
 </body>
 </html>
