--- a/public/pages/insurance/kj-driver-endorse-list.html
+++ b/public/pages/insurance/kj-driver-endorse-list.html
@@ -105,9 +105,9 @@
                       <th>No</th>
                       <th>담당자</th>
                       <th>대리운전회사명</th>
-                      <th>성명</th>
+                      <th style="width: 6%;">성명</th>
                       <th>주민번호(나이)</th>
-                      <th>핸드폰</th>
+                      <th style="width: 12%;">핸드폰</th>
                       <th>진행단계</th>
                       <th>manager</th>
                       <th>기준일</th>
