--- a/public/pages/insurance/kj-driver-endorse-list.html
+++ b/public/pages/insurance/kj-driver-endorse-list.html
@@ -123,7 +123,7 @@
                       <th>중복여부</th>
                     </tr>
                   </thead>
-                  <tbody id="endorseListTableBody">
+                  <tbody id="endorseListTableBody" style="font-size: 0.85rem;">
                     <tr>
                       <td colspan="19" class="text-center py-4">필터를 선택하세요.</td>
                     </tr>
