폰트 사이즈 조정

--- a/public/pages/insurance/kj-driver-endorse-list.html
+++ b/public/pages/insurance/kj-driver-endorse-list.html
@@ -100,27 +100,26 @@
             <div class="desktop-table">
               <div class="table-responsive">
                 <table class="table table-bordered table-hover table-sm" style="font-size: 0.85rem;">
-                  <thead class="thead-light">
+                  <thead class="thead-light" style="font-size: 0.85rem;">
                     <tr>
-                      <th>No</th>
-                      <th>담당자</th>
-                      <th>대리운전회사명</th>
-                      <th style="width: 6%;">성명</th>
-                      <th>주민번호(나이)</th>
-                      <th style="width: 6%;">핸드폰</th>
-                      <th>진행단계</th>
-                      <th>manager</th>
-                      <th>기준일</th>
-                      <th>신청일</th>
-                      <th>증권번호</th>
-                      <th>증권성격</th>
-                      <th>요율</th>
-                      <th>상태</th>
-                      <th>배서처리</th>
-                      <th>보험사</th>
-                      <th class="text-end">보험료</th>
-                      <th class="text-end">C보험료</th>
-                      <th>중복여부</th>
+                      <th style="font-size: 0.85rem;">No</th>
+                      <th style="font-size: 0.85rem;">담당자</th>
+                      <th style="font-size: 0.85rem;">대리운전회사명</th>
+                      <th style="width: 6%; font-size: 0.85rem;">성명</th>
+                      <th style="font-size: 0.85rem;">주민번호(나이)</th>
+                      <th style="width: 6%; font-size: 0.85rem;">핸드폰</th>
+                      <th style="font-size: 0.85rem;">진행단계</th>
+                      <th style="font-size: 0.85rem;">manager</th>
+                      <th style="font-size: 0.85rem;">기준일</th>
+                      <th style="font-size: 0.85rem;">신청일</th>
+                      <th style="font-size: 0.85rem;">증권번호</th>
+                      <th style="font-size: 0.85rem;">증권성격</th>
+                      <th style="font-size: 0.85rem;">요율</th>
+                      <th style="font-size: 0.85rem;">상태</th>
+                      <th style="font-size: 0.85rem;">배서처리</th>
+                      <th class="text-end" style="font-size: 0.85rem;">보험료</th>
+                      <th class="text-end" style="font-size: 0.85rem;">C보험료</th>
+                      <th style="font-size: 0.85rem;">중복여부</th>
                     </tr>
                   </thead>
                   <tbody id="endorseListTableBody" style="font-size: 0.85rem;">
