폰트 사이즈 조정

--- a/public/pages/insurance/kj-driver-endorse-list.html
+++ b/public/pages/insurance/kj-driver-endorse-list.html
@@ -117,6 +117,7 @@
                       <th>요율</th>
                       <th>상태</th>
                       <th>배서처리</th>
+                      <th>보험사</th>
                       <th class="text-end">보험료</th>
                       <th class="text-end">C보험료</th>
                       <th>중복여부</th>
