--- a/public/pages/insurance/kj-driver-endorse-list.html
+++ b/public/pages/insurance/kj-driver-endorse-list.html
@@ -280,7 +280,7 @@
                      style="width: 1.25rem; height: 1.25rem; cursor: pointer;">
               <label class="form-check-label flex-grow-1" for="updateAllSamePolicy" style="cursor: pointer; font-size: 0.95rem; color: #495057; white-space: nowrap;">
                 <i class="fas fa-info-circle text-primary me-2"></i>
-                <strong>동일 증권의 상태가 1인 모든 배서건의 배서기준일 변경</strong>
+                <strong>동일 증권의 상태가 1인 모든 배서건의 배서기준일 변경</strong><br>
                 <span class="text-muted ms-2">(체크 해제 시 현재 선택한 건만 변경됩니다)</span>
               </label>
             </div>
