--- a/public/pages/insurance/kj-driver-endorse-list.html
+++ b/public/pages/insurance/kj-driver-endorse-list.html
@@ -99,8 +99,21 @@
                   </select>
                 </div>
                 
+                <!-- 필터 버튼들 -->
+                <div class="col-auto mb-2 mb-md-0 ms-auto d-flex gap-2">
+                  <button type="button" class="btn btn-sm btn-outline-primary" id="btnEndorseStatus" style="height: 31px; font-size: 0.8rem;">
+                    <i class="fas fa-chart-bar me-1"></i>배서현황
+                  </button>
+                  <button type="button" class="btn btn-sm btn-outline-success" id="btnDailyEndorseList" style="height: 31px; font-size: 0.8rem;">
+                    <i class="fas fa-list me-1"></i>일일배서리스트
+                  </button>
+                  <button type="button" class="btn btn-sm btn-outline-info" id="btnSmsList" style="height: 31px; font-size: 0.8rem;">
+                    <i class="fas fa-sms me-1"></i>문자리스트
+                  </button>
+                </div>
+                
                 <!-- 통계 정보 (필터와 같은 높이) -->
-                <div class="col-auto mb-2 mb-md-0 ms-auto">
+                <div class="col-auto mb-2 mb-md-0">
                   <div class="form-control form-control-sm bg-info bg-opacity-10 border-info text-dark" id="statsInfo" style="height: 31px; display: flex; align-items: center; font-size: 0.8rem; padding: 0.25rem 0.5rem;">
                     <strong>청약:</strong><span id="statsSubscription">0</span>, 
                     <strong>해지:</strong><span id="statsCancellation">0</span>, 
@@ -313,6 +326,137 @@
                   style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); border: none; font-weight: 600; box-shadow: 0 4px 15px rgba(102, 126, 234, 0.4);">
             <i class="fas fa-save me-2"></i>배서기준일 변경
           </button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- 배서현황 모달 -->
+  <div class="modal fade" id="endorseStatusModal" tabindex="-1" aria-labelledby="endorseStatusModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-xl modal-dialog-scrollable">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="endorseStatusModalLabel">
+            <i class="fas fa-chart-bar me-2"></i>배서현황
+          </h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="닫기"></button>
+        </div>
+        <div class="modal-body" style="max-height: 80vh; overflow-y: auto;">
+          <div class="mb-3">
+            <label class="form-label">대리운전회사</label>
+            <select id="endorseStatus_companySelect" class="form-control form-control-sm">
+              <option value="">-- 대리운전회사 선택 --</option>
+            </select>
+          </div>
+          <div class="mb-3">
+            <label class="form-label">날짜</label>
+            <input type="date" id="endorseStatus_date" class="form-control form-control-sm">
+          </div>
+          <div class="mb-3">
+            <button type="button" class="btn btn-primary btn-sm" id="btnEndorseStatusCheck">
+              <i class="fas fa-search me-1"></i>조회
+            </button>
+          </div>
+          <div id="m_endorseCheck">
+            <!-- 배서현황 보고서가 여기에 표시됩니다 -->
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">닫기</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- 일일배서리스트 모달 -->
+  <div class="modal fade" id="dailyEndorseListModal" tabindex="-1" aria-labelledby="dailyEndorseListModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-xl modal-dialog-scrollable">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="dailyEndorseListModalLabel">
+            <i class="fas fa-list me-2"></i>일일배서리스트
+          </h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="닫기"></button>
+        </div>
+        <div class="modal-body" style="max-height: 80vh; overflow-y: auto;">
+          <div class="row mb-3">
+            <div class="col-md-3">
+              <label class="form-label">날짜</label>
+              <input type="date" id="dailyDate" class="form-control form-control-sm">
+            </div>
+            <div class="col-md-3">
+              <label class="form-label">대리운전회사</label>
+              <select id="daily_endorse_dNumList" class="form-control form-control-sm">
+                <option value="">-- 대리운전회사 선택 --</option>
+              </select>
+            </div>
+            <div class="col-md-3">
+              <label class="form-label">증권번호</label>
+              <select id="daily_endorse_certiList" class="form-control form-control-sm">
+                <option value="">-- 증권 선택 --</option>
+              </select>
+            </div>
+            <div class="col-md-3 d-flex align-items-end">
+              <button type="button" class="btn btn-primary btn-sm" id="btnDailyEndorseSearch">
+                <i class="fas fa-search me-1"></i>조회
+              </button>
+            </div>
+          </div>
+          <div id="daily_currentSituation" class="mb-2 text-info"></div>
+          <div class="table-responsive">
+            <table class="table table-bordered table-sm table-hover">
+              <thead class="table-light">
+                <tr>
+                  <th>No</th>
+                  <th>성명</th>
+                  <th>주민번호</th>
+                  <th>핸드폰</th>
+                  <th>상태</th>
+                  <th>증권번호</th>
+                  <th>증권성격</th>
+                  <th>보험사</th>
+                  <th>회사명</th>
+                  <th>회사전화</th>
+                  <th>요율</th>
+                  <th>보험료</th>
+                  <th>C보험료</th>
+                  <th>처리자</th>
+                  <th>처리일시</th>
+                </tr>
+              </thead>
+              <tbody id="m_dailyEndose">
+                <tr>
+                  <td colspan="15" class="text-center py-4">조회 조건을 선택하고 조회 버튼을 클릭하세요.</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+          <div id="sms-pagination" class="mt-3"></div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">닫기</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- 문자리스트 모달 -->
+  <div class="modal fade" id="smsListModal" tabindex="-1" aria-labelledby="smsListModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-xl modal-dialog-scrollable">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="smsListModalLabel">
+            <i class="fas fa-sms me-2"></i>문자리스트
+          </h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="닫기"></button>
+        </div>
+        <div class="modal-body" style="max-height: 80vh; overflow-y: auto;">
+          <div class="alert alert-info">
+            <i class="fas fa-info-circle me-2"></i>문자리스트 기능은 준비 중입니다.
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">닫기</button>
         </div>
       </div>
     </div>
