일일배서리스트 모달

--- a/public/pages/insurance/kj-driver-endorse-list.html
+++ b/public/pages/insurance/kj-driver-endorse-list.html
@@ -381,17 +381,14 @@
         <div class="modal-body" style="max-height: 80vh; overflow-y: auto;">
           <div class="row mb-3">
             <div class="col-md-3">
-              <label class="form-label">날짜</label>
-              <input type="date" id="dailyDate" class="form-control form-control-sm">
+              <input type="date" id="dailyDate" class="form-control form-control-sm" placeholder="날짜">
             </div>
             <div class="col-md-3">
-              <label class="form-label">대리운전회사</label>
               <select id="daily_endorse_dNumList" class="form-control form-control-sm">
                 <option value="">-- 대리운전회사 선택 --</option>
               </select>
             </div>
             <div class="col-md-3">
-              <label class="form-label">증권번호</label>
               <select id="daily_endorse_certiList" class="form-control form-control-sm">
                 <option value="">-- 증권 선택 --</option>
               </select>
