--- a/public/pages/insurance/kj-driver-endorse-list.html
+++ b/public/pages/insurance/kj-driver-endorse-list.html
@@ -428,11 +428,9 @@
               </tbody>
             </table>
           </div>
-          <div id="sms-pagination" class="mt-5 mb-3"></div>
+          <div id="sms-pagination" class="pagination-spacing"></div>
         </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">닫기</button>
-        </div>
+        
       </div>
     </div>
   </div>
@@ -495,6 +493,11 @@
     }
     .kje-preiminum {
       padding: 0 !important;
+    }
+    /* 페이지네이션과 테이블 사이 간격 */
+    .pagination-spacing {
+      margin-top: 5rem !important; /* 80px */
+      margin-bottom: 1.5rem !important; /* 24px */
     }
   </style>
 
