마진 조정 & 행의 갯수 15개

--- a/public/pages/insurance/kj-driver-endorse-list.html
+++ b/public/pages/insurance/kj-driver-endorse-list.html
@@ -494,8 +494,8 @@
     .kje-preiminum {
       padding: 0 !important;
     }
-    /* 페이지네이션과 테이블 사이 간격 */
-    .pagination-spacing {
+    /* 페이지네이션과 테이블 사이 간격 - 인라인 스타일로 적용하므로 CSS는 백업용 */
+    #dailyEndorseListModal #sms-pagination {
       margin-top: 5rem !important; /* 80px */
       margin-bottom: 1.5rem !important; /* 24px */
     }
