마진 조정 & 행의 갯수 15개

--- a/public/pages/insurance/kj-driver-endorse-list.html
+++ b/public/pages/insurance/kj-driver-endorse-list.html
@@ -496,8 +496,8 @@
     }
     /* 페이지네이션과 테이블 사이 간격 - 인라인 스타일로 적용하므로 CSS는 백업용 */
     #dailyEndorseListModal #sms-pagination {
-      margin-top: 5rem !important; /* 80px */
-      margin-bottom: 1.5rem !important; /* 24px */
+      margin-top: 3.33rem !important; /* 약 53px */
+      margin-bottom: 1rem !important; /* 16px */
     }
   </style>
 
