배서현황 모달

--- a/public/pages/insurance/kj-driver-endorse-list.html
+++ b/public/pages/insurance/kj-driver-endorse-list.html
@@ -342,7 +342,7 @@
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="닫기"></button>
         </div>
         <div class="modal-body" style="max-height: 80vh; overflow-y: auto;">
-          <div class="row mb-3 align-items-end">
+          <div class="row mb-3 align-items-end" style="display: none;">
             <div class="col-md-4">
               <select id="endorseStatus_companySelect" class="form-control form-control-sm">
                 <option value="">-- 대리운전회사 선택 --</option>
