--- a/public/pages/insurance/kj-driver-endorse-list.html
+++ b/public/pages/insurance/kj-driver-endorse-list.html
@@ -522,6 +522,10 @@
     }
 
     /* 배서현황 모달을 왼쪽에 표시하고 폭을 현재보다 1/3 작게 (원래 modal-xl 폭의 2/3 = 약 760px) */
+    #endorseStatusModal.modal-side-by-side {
+      z-index: 1057 !important; /* 일일배서리스트 모달보다 높게 설정하여 클릭 가능하도록 */
+    }
+    
     #endorseStatusModal.modal-side-by-side .modal-dialog {
       position: fixed !important;
       left: 0.5rem !important;
@@ -530,6 +534,7 @@
       transform: none !important;
       width: 760px !important; /* modal-xl(1140px)의 2/3 크기 */
       max-width: calc(33.33vw - 1rem) !important; /* 화면이 작을 경우 화면 너비의 1/3 */
+      z-index: 1057 !important; /* 클릭 가능하도록 z-index 명시 */
     }
 
     /* 모달 배경 오버레이 스타일 */
